--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -43,6 +43,8 @@ mat-toolbar {
   justify-content: center;
   gap: 40px;
   margin-block: 25px;
+  transition: 0.3s;
+
   aside {
     max-width: 270px;
     display: flex;
@@ -69,7 +71,6 @@ mat-toolbar {
       border-radius: 5%;
       background-color: #fff;
       display: block;
-      margin-bottom: 20px;
       box-shadow: #bda1dd 2px 2px 3px;
       border: solid #bda1dd 1px;
     }
@@ -89,46 +90,18 @@ mat-toolbar {
   cursor: pointer;
 }
 
-@media screen and (min-width: 500px) and (max-width: 800px) {
+@media screen and (min-width: 500px) and (max-width: 1180px) {
   .container {
+    transition: 0.3s;
     flex-direction: column;
     align-items: center;
 
-    .pfp {
-      width: 235px !important;
-      height: 235px !important;
+    aside {
+      flex-direction: row;
+      align-items: center;
+      max-width: 90%;
+      gap: 25px;
     }
-
-    .bio {
-      padding: 7px;
-      height: 330px !important;
-      // overflow: visible;
-      // direction: rtl;
-
-      // p:not(.social-links) {
-      //     text-align: center;
-      // }
-
-      height: 400px;
-
-      .social-links {
-        position: absolute;
-        width: 120%;
-        bottom: -20% !important;
-        right: -10%;
-        text-align: center;
-      }
-    }
-  }
-
-  aside {
-    width: 99% !important;
-    padding-top: 3px;
-    margin-left: 10px !important;
-    display: flex !important;
-    flex-direction: row !important;
-    align-items: flex-start !important;
-    max-width: unset !important;
   }
 
   .burger {
