--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,7 @@
 // @import '~@angular/material/prebuilt-themes/purple-green.css';
 // @import '~github-calendar/dist/github-calendar.css';
 
-html, body { height: 100%; width: 100%; }
+html, body { height: 100%; width: 100%; display: none; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 
