--- a/src/app/pages/articles/articles.component.scss
+++ b/src/app/pages/articles/articles.component.scss
@@ -23,6 +23,13 @@
     .tag {
       color: #c552d9;
     }
+
+    .article-actions {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+    }
   }
 }
 
